--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "require": {
     "mustache/mustache": "^2.12",
-    "openactive/models": "dev-master"
+    "openactive/models": "dev-validate-times"
   },
   "autoload": {
     "psr-4": {
