--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
   "type": "project",
   "license": "MIT",
   "require": {
+    "php": ">=5.5",
     "mustache/mustache": "^2.12",
-    "openactive/models": "^0.4.0"
+    "openactive/models": "^0.5.0"
   },
   "autoload": {
     "psr-4": {
