--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": ">=5.5",
     "mustache/mustache": "^2.12",
-    "openactive/models": "^0.6"
+    "openactive/models": "^0.8.0"
   },
   "autoload": {
     "psr-4": {
@@ -19,5 +19,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8"
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit"
   }
 }
