--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": ">=5.5",
     "mustache/mustache": "^2.12",
-    "openactive/models": "^0.8.0"
+    "openactive/models": "^1.0.0 | 0.*"
   },
   "autoload": {
     "psr-4": {
