--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8"
+    "phpunit/phpunit": "^5.7 | ^9.0"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit"
