Set working directory

--- a/.github/workflows/create-dataset-site-template-pr.yaml
+++ b/.github/workflows/create-dataset-site-template-pr.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Update dataset site template to latest version
         run: npx @openactive/dataset-site-template@latest --raw "./src/"
+        working-directory: ./
         
       - name: git stash if material changes have not been made
         # When considering whether it's worth making a PR, ignore the following:
