--- a/.github/workflows/create-dataset-site-template-pr.yaml
+++ b/.github/workflows/create-dataset-site-template-pr.yaml
@@ -23,6 +23,10 @@ jobs:
       - name: Update dataset site template to latest version
         run: npx @openactive/dataset-site-template@latest --raw "./src/"
         working-directory: ./
+
+      - name: Update assets in example
+        run: unzip ./src/datasetsite-csp.static.zip -d ./examples/openactive-csp/assets/
+        working-directory: ./
         
       - name: git stash if material changes have not been made
         # When considering whether it's worth making a PR, ignore the following:
