--- a/.github/workflows/create-dataset-site-template-pr.yaml
+++ b/.github/workflows/create-dataset-site-template-pr.yaml
@@ -4,7 +4,11 @@ on:
   workflow_dispatch:
   repository_dispatch:
     types: [dataset-site-template-update]
-
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+    
 jobs:
   generate:
     runs-on: ubuntu-latest
