--- a/.github/workflows/create-dataset-site-template-pr.yaml
+++ b/.github/workflows/create-dataset-site-template-pr.yaml
@@ -16,8 +16,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: master
 
       - name: Setup Node.js 14.x
         uses: actions/setup-node@v1
@@ -29,9 +27,7 @@ jobs:
         working-directory: ./
 
       - name: Update assets in example
-        run: |
-          ls -R
-          unzip -o ./src/datasetsite-csp.static.zip -d ./examples/openactive-csp/assets/
+        run: unzip -o ./src/datasetsite-csp.static.zip -d ./examples/openactive-csp/assets/
         working-directory: ./
         
       - name: git stash if material changes have not been made
