--- a/.github/workflows/create-dataset-site-template-pr.yaml
+++ b/.github/workflows/create-dataset-site-template-pr.yaml
@@ -25,7 +25,10 @@ jobs:
         working-directory: ./
 
       - name: Update assets in example
-        run: unzip -o ./src/datasetsite-csp.static.zip -d ./examples/openactive-csp/assets/
+        run: |
+          rm -rf ./examples/openactive-csp/assets/
+          mkdir -p ./examples/openactive-csp/assets/
+          unzip ./src/datasetsite-csp.static.zip -d ./examples/openactive-csp/assets/
         working-directory: ./
         
       - name: git stash if material changes have not been made
