--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7 | ^9.0"
+    "phpunit/phpunit": "^5.7 | ^9.0",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit"
