--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "openactive/dataset-site",
+  "description": "Library for rendering the OpenActive dataset site",
   "type": "project",
   "license": "MIT",
   "require": {
@@ -18,7 +19,8 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8"
+    "phpunit/phpunit": "^5.7 | ^9.0",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit"
