Use composer to start the PHP built in server to run the examples

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
     "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
+    "start": "php -S localhost:8080 -t examples/openactive",
+    "start-csp": "php -S localhost:8080 -t examples/openactive-csp",
     "test": "./vendor/bin/phpunit"
   }
 }
